com.uhspot.navigation.ui

--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,7 +1,7 @@
 ext {
 
   androidVersions = [
-      minSdkVersion           : 21,
+      minSdkVersion           : 24,
       targetSdkVersion        : 30,
       compileSdkVersion       : 30
   ]
@@ -47,7 +47,7 @@ ext {
       lifecycleViewModelKtx     : '2.2.0',
       gmsLocation               : '17.0.0',
       ktlint                    : '0.41.0',
-      kotlinStdLib              : '1.5.0',
+      kotlinStdLib              : '1.5.10',
       firebaseCrashlytics       : '17.3.1',
       multidex                  : '2.0.0',
       json                      : '20180813',
@@ -163,7 +163,7 @@ ext {
       gradle               : '4.0.1',
       dependencyGraph      : '0.5.0',
       dependencyUpdates    : '0.29.0',
-      kotlin               : '1.5.0',
+      kotlin               : '1.5.10',
       license              : '0.8.5',
       jacoco               : '0.2',
       googleServices       : '4.3.3',
@@ -172,7 +172,8 @@ ext {
       mapboxSdkRegistry    : '0.4.0',
       mapboxAccessToken    : '0.2.1',
       mapboxNativeDownload : '0.1.2',
-      firebaseCrashlytics  : '2.5.1'
+      firebaseCrashlytics  : '2.5.1',
+      kapt                 : '3.5.0'
   ]
 
   pluginDependencies = [
