--- a/libnavigation-base/build.gradle
+++ b/libnavigation-base/build.gradle
@@ -21,6 +21,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'proguard-rules.pro', "${rootDir}/proguard/proguard-project.pro"
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
